--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "next": "10.2.3",
     "react": "17.0.2",
