--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "classnames": "^2.3.1",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
