--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-number-format": "^4.6.3"
+    "react-number-format": "^4.6.3",
+    "react-toastify": "^7.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
