--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "aos": "^2.3.4",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.1.2",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
