--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "jsx": "preserve"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "stories"]
 }
