--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-NEXT_PUBLIC_API = https://api-bwa-storegg.herokuapp.com
-NEXT_PUBLIC_IMG = https://api-bwa-storegg.herokuapp.com/uploads
+-NEXT_PUBLIC_API = https://api-bwa-storegg.herokuapp.com
+-NEXT_PUBLIC_IMG = https://api-bwa-storegg.herokuapp.com/uploads
+
+
+
+
+NEXT_PUBLIC_API = http://localhost:1000
+NEXT_PUBLIC_IMG = http://localhost:1000/uploads
